--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,7 +9,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="script.js" type="module" defer></script>
+	<script src="index.js" type="module" defer></script>
+	<script src="login.js" type="module" defer></script>
+	<script src="gallery.js" type="module" defer></script>
+	<script src="filter.js" type="module" defer></script>
 </head>
 <body>
 <header>
@@ -18,7 +21,7 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li>login</li>
+			<a href="./login.html"><li>login</li></a>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
