--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -7,11 +7,13 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 	<script src="login.js" type="module" defer></script>
 	<script src="gallery.js" type="module" defer></script>
 	<script src="filter.js" type="module" defer></script>
+	<script src="admin.js" type="module" defer></script>
 </head>
 <body>
 <header>
