--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -14,6 +14,7 @@
 	<script src="gallery.js" type="module" defer></script>
 	<script src="filter.js" type="module" defer></script>
 	<script src="admin.js" type="module" defer></script>
+	<script src="modale.js" type="module" defer></script>
 </head>
 <body>
 <header>
