--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,11 +10,11 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="login.js" type="module" defer></script>
-	<script src="gallery.js" type="module" defer></script>
-	<script src="filter.js" type="module" defer></script>
-	<script src="admin.js" type="module" defer></script>
-	<script src="modale.js" type="module" defer></script>
+	<script src="./assets/script/login.js" type="module" defer></script>
+	<script src="./assets/script/gallery.js" type="module" defer></script>
+	<script src="./assets/script/filter.js" type="module" defer></script>
+	<script src="./assets/script/admin.js" type="module" defer></script>
+	<script src="./assets/script/modale.js" type="module" defer></script>
 </head>
 <body>
 <header>
